--- a/docs/getting-started/quick-integration.mdx
+++ b/docs/getting-started/quick-integration.mdx
@@ -18,7 +18,7 @@ Explore integration samples with other providers like Anthropic, Cohere, Hugging
 ```python
 import openai
 
-# Set Portkey as the base path
+# Set Numexa as the base path
 openai.api_base = "https://app.numexa.io/v1/proxy"
 
 response = openai.Completion.create(
